# oidc-fastapi-authlib

./: .env  LICENSE  README.md  docker-compose.yml
.devcontainer/: devcontainer.json
backend/: Dockerfile  main.py  pyproject.toml
nginx/: default.conf
spa/: index.html
